@@ -5,6 +5,11 @@ This file lists every change made except typo and formatting fixes, which are
 only listed in SVN log. For a summary of what has changed between releases,
 see the NEWS file.
 
+2006-11-12 Elfyn McBratney <beu@freenode.net>
+
+	* include/channel.h, src/chmode.c, src/channel.c: Implement channel
+	mode +R (quiets those who have not identified to services).
+
 2006-11-04 Stephen Bennett <spb@gentoo.org>
 
 	* include/numeric.h, include/s_newconf.h, src/chmode.c, src/s_user.c,
